--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 <link rel="stylesheet" href="style.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <!-- Open Graph -->
+  <meta property="og:title" content="Niver da Sabrina">
+  <meta property="og:description" content="Parabéns Sabrina! <3">
+  <meta property="og:image" content="https://niversay.github.io/Sabrina/preview.png">
+  <meta property="og:url" content="https://niversay.github.io/Sabrina/">
+  <meta property="og:type" content="website">
+
+  <meta name="twitter:card" content="summary_large_image">
+
+  
 </head>
 <body onload="confete(); iniciarContador();">
 
@@ -28,4 +38,5 @@
 </body>
 
 </html>
+
 
